<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_panel_image"
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:contentDescription="@string/user_image"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_panel_person" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_panel_layout_name"
            style="@style/TEXT_INPUT_STYLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/name"
            android:textColorHint="@color/black"
            app:errorEnabled="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_panel_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_panel_edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_panel_layout_email"
            style="@style/TEXT_INPUT_STYLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:errorEnabled="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_panel_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_panel_edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_panel_layout_password"
            style="@style/TEXT_INPUT_STYLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_panel_layout_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_panel_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="12"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_panel_layout_password_confirmation"
            style="@style/TEXT_INPUT_STYLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password_confirmation"
            android:textColorHint="@color/black"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_panel_layout_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_panel_edit_text_password_confirmation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberPassword"
                android:maxLength="12"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>