...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <include
        android:id="@+id/register_fragment_btn"
        layout="@layout/button_contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="100dp"
        app:layout_constraintBottom_toTopOf="@id/register_support"
...
